# entry_task_bcp

./: .gitignore  Instructions.md  README.md  README_DEPLOY.md  verify_step_6.py  verify_step_7.py  verify_step_8.py
agents/: Dockerfile  app.py  aws_rag_service.py  orchestrator.py  pyproject.toml  web_search_service.py
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py  report_service.py  serializers.py  services.py  views.py
backend/core/management/commands/: analyze_transactions.py  ingest_rag.py  seed_data.py
backend/core/migrations/: 0001_initial.py
cdk/: app_stack.py  cdk.json  constants.py  main.py  pipeline_stack.py  requirements.txt  resources_stack.py
cdk/lib/: app_stack.py  pipeline_stack.py  resources_stack.py
data/: customer_behavior.csv  fraud_policies.json  transactions.csv
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  HITLQueue.jsx  ManualEntry.jsx  Reports.jsx  Simulator.jsx  TransactionDetail.jsx
frontend/src/services/: api.js
