[project]
name = "fraud-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.37",
    "django==4.2.*",
    "django-cors-headers>=4.9.0",
    "djangorestframework==3.15.*",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "gunicorn>=23.0.0",
    "requests>=2.32.0",
]

[tool.uv]
